<resources>
    <string name="app_name">Christine</string>
    <string name="add_song">Add Song</string>
    <string name="manage_unsorted">Manage Unsorted</string>
    <string name="enter_song_name">Enter song name</string>
    <string name="name">Name</string>
    <string name="artist">Artist</string>
    <string name="choose_file">Choose file</string>
    <string name="problem_getting_file_path">Problem getting file path</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="select_a_file">Select a file</string>
    <string name="choose_file_and_enter_name">Choose file and enter name</string>
    <string name="manage_file">Manage file?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="album">Album</string>
    <string name="song_cover">Song cover</string>
    <string name="cover_url">Cover URL</string>
    <string name="cover">Cover</string>
    <string name="title">Title</string>
    <string name="shuffle">Shuffle</string>
    <string name="songs">Songs</string>
    <string name="options">Options</string>
    <string name="status">Status</string>
    <string name="remote_library">Remote library</string>
    <string name="sending_file_please_wait">Sending file please wait</string>
    <string name="pause">Pause</string>
    <string name="artists">Artists</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="some_error">Some error</string>
    <string name="retrieving_form">Retrieving form</string>
    <string name="connected">Connected</string>
    <string name="error_connecting">Error connecting</string>
    <string name="disconnected">Disconnected</string>
    <string name="play">Play</string>
    <string name="enter_server_address">Enter server address</string>
    <string name="set_server_ip">Set server IP</string>
    <string name="player_error">Player error</string>
    <string name="check_music_folder">Check Music Folder</string>
</resources>
