<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:id="@+id/main_layout"
    android:gravity="bottom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    sothree:umanoDragView="@+id/player_slider"
    sothree:umanoPanelHeight="68dp"
    sothree:umanoShadowHeight="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <android.support.v4.view.ViewPager
            android:id="@+id/main_layout_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TabLayout
                android:id="@+id/main_tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.v4.view.ViewPager>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="false"
        android:id="@+id/player_slider">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:padding="8dp"
            android:gravity="top"
            android:id="@+id/player_minimized_layout">

            <TextView
                android:id="@+id/player_minimized_name"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_alignWithParentIfMissing="true"
                android:layout_above="@+id/player_minimized_time"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_toEndOf="@+id/player_minimized_cover"
                android:layout_toRightOf="@+id/player_minimized_cover"
                android:gravity="center_vertical"
                android:text="@string/name" />

            <player.christine.client.musicplayer.MediaSeekBar
                android:id="@+id/player_minimized_time"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/status"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/player_minimized_cover"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_above="@+id/player_minimized_time"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginBottom="2dp"
                app:srcCompat="@android:drawable/ic_menu_report_image"
                android:contentDescription="@string/cover" />

            <Button
                android:id="@+id/player_minimized_pause_button"
                style="@android:style/MediaButton.Pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/player_minimized_time"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/pause"
                android:layout_toEndOf="@id/player_minimized_name"
                android:layout_toRightOf="@id/player_minimized_name" />
        </RelativeLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/player_main_layout"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/player_song_cover_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@android:drawable/ic_menu_report_image"
                android:contentDescription="@string/cover" />

            <Button
                android:id="@+id/player_next_button"
                style="@android:style/MediaButton.Next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/player_song_seek_bar" />

            <Button
                android:id="@+id/player_previous_button"
                style="@android:style/MediaButton.Previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/previous"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/player_song_seek_bar" />

            <Button
                android:id="@+id/player_pause_button"
                style="@android:style/MediaButton.Pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/pause"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/player_next_button"
                app:layout_constraintStart_toEndOf="@+id/player_previous_button"
                app:layout_constraintTop_toBottomOf="@+id/player_song_seek_bar" />

            <player.christine.client.musicplayer.MediaSeekBar
                android:id="@+id/player_song_seek_bar"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/player_seek_bar_time_view"
                app:layout_constraintTop_toBottomOf="@+id/player_song_name_view" />

            <TextView
                android:id="@+id/player_song_name_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/name"
                app:layout_constraintEnd_toEndOf="@+id/player_song_cover_image"
                app:layout_constraintStart_toStartOf="@+id/player_song_cover_image"
                app:layout_constraintTop_toBottomOf="@+id/player_song_cover_image" />

            <TextView
                android:id="@+id/player_seek_bar_time_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/status"
                app:layout_constraintBottom_toBottomOf="@+id/player_song_seek_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/player_song_seek_bar"
                app:layout_constraintTop_toTopOf="@+id/player_song_seek_bar" />

        </android.support.constraint.ConstraintLayout>

    </FrameLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>
